Software/Lexical_Analysis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOTDOTEQ
    RANGE
    WRONG_ID

Grammar

Rule 0     S' -> root
Rule 1     root -> main root
Rule 2     root -> function root
Rule 3     root -> procedure root
Rule 4     root -> let root
Rule 5     root -> empty empty
Rule 6     functions -> ID
Rule 7     main -> FN MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
Rule 8     line -> loop line
Rule 9     line -> function line
Rule 10    line -> procedure line
Rule 11    line -> for line
Rule 12    line -> while line
Rule 13    line -> if line
Rule 14    line -> let line
Rule 15    line -> move line
Rule 16    line -> moveList line
Rule 17    line -> delay line
Rule 18    line -> println line
Rule 19    line -> break line
Rule 20    line -> empty empty
Rule 21    procedure -> FN ID LPAREN params RPAREN prodbody
Rule 22    prodbody -> LCRLBRACKET line RCRLBRACKET
Rule 23    function -> FN ID LPAREN params RPAREN funbody
Rule 24    params -> ID arg
Rule 25    params -> empty empty
Rule 26    arg -> COMMA params
Rule 27    arg -> COMMA arg
Rule 28    arg -> empty empty
Rule 29    funbody -> ARROW output LCRLBRACKET line end RCRLBRACKET
Rule 30    output -> INTEGER
Rule 31    output -> BOOLEAN
Rule 32    end -> RETURN expression SEMICOLON
Rule 33    loop -> LOOP LCRLBRACKET line RCRLBRACKET
Rule 34    for -> FOR ID IN INT DOTDOT INT LCRLBRACKET line RCRLBRACKET
Rule 35    while -> WHILE LPAREN expression compare expression RPAREN LCRLBRACKET line RCRLBRACKET
Rule 36    while -> WHILE TRUE LCRLBRACKET line RCRLBRACKET
Rule 37    move -> MOVE LPAREN STRING COMMA bool RPAREN SEMICOLON
Rule 38    moveList -> MOVE LPAREN LSQRBRACKET fingerList RSQRBRACKET COMMA bool RPAREN SEMICOLON
Rule 39    fingerList -> STRING COMMA STRING
Rule 40    fingerList -> STRING COMMA fingerList
Rule 41    delay -> DELAY LPAREN INT COMMA STRING RPAREN SEMICOLON
Rule 42    unit -> QUOT MIN QUOT
Rule 43    unit -> QUOT MIL QUOT
Rule 44    unit -> QUOT SEG QUOT
Rule 45    println -> PRINT EXPR LPAREN args RPAREN SEMICOLON
Rule 46    args -> INT body
Rule 47    args -> ID body
Rule 48    args -> opera body
Rule 49    args -> TRUE body
Rule 50    args -> FALSE body
Rule 51    args -> STRING body
Rule 52    body -> COMMA args
Rule 53    body -> COMMA body
Rule 54    body -> empty empty
Rule 55    text -> QUOT ID QUOT
Rule 56    elseiforelse -> elseif
Rule 57    elseiforelse -> else
Rule 58    if -> IF expression compare expression LCRLBRACKET line RCRLBRACKET empty
Rule 59    if -> IF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
Rule 60    elseif -> ELSEIF expression compare expression LCRLBRACKET line RCRLBRACKET empty
Rule 61    elseif -> ELSEIF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
Rule 62    else -> ELSE LCRLBRACKET line RCRLBRACKET
Rule 63    compare -> EQEQ
Rule 64    compare -> LTE
Rule 65    compare -> GTE
Rule 66    compare -> LT
Rule 67    compare -> GT
Rule 68    expression -> INT
Rule 69    expression -> TRUE
Rule 70    expression -> FALSE
Rule 71    expression -> opera
Rule 72    expression -> ID
Rule 73    expression -> negative
Rule 74    let -> LET ID ASSIGN operand SEMICOLON
Rule 75    let -> LET ID ASSIGN bool SEMICOLON
Rule 76    opera -> OPERA LPAREN operator COMMA operand COMMA operand RPAREN
Rule 77    operator -> PLUS
Rule 78    operator -> MINUS
Rule 79    operator -> DIVIDE
Rule 80    operator -> ASTR
Rule 81    operator -> TIMES
Rule 82    operand -> INT
Rule 83    operand -> opera
Rule 84    operand -> ID
Rule 85    operand -> negative
Rule 86    negative -> MINUS INT
Rule 87    bool -> TRUE
Rule 88    bool -> FALSE
Rule 89    bool -> ID
Rule 90    break -> BREAK
Rule 91    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 29
ASSIGN               : 74 75
ASTR                 : 80
BOOLEAN              : 31
BREAK                : 90
COMMA                : 26 27 37 38 39 40 41 52 53 76 76
DELAY                : 41
DIVIDE               : 79
DOTDOT               : 34
DOTDOTEQ             : 
ELSE                 : 62
ELSEIF               : 60 61
EQEQ                 : 63
EXPR                 : 45
FALSE                : 50 70 88
FN                   : 7 21 23
FOR                  : 34
GT                   : 67
GTE                  : 65
ID                   : 6 21 23 24 34 47 55 72 74 75 84 89
IF                   : 58 59
IN                   : 34
INT                  : 34 34 41 46 68 82 86
INTEGER              : 30
LCRLBRACKET          : 7 22 29 33 34 35 36 58 59 60 61 62
LET                  : 74 75
LOOP                 : 33
LPAREN               : 7 21 23 35 37 38 41 45 76
LSQRBRACKET          : 38
LT                   : 66
LTE                  : 64
MAIN                 : 7
MIL                  : 43
MIN                  : 42
MINUS                : 78 86
MOVE                 : 37 38
OPERA                : 76
PLUS                 : 77
PRINT                : 45
QUOT                 : 42 42 43 43 44 44 55 55
RANGE                : 
RCRLBRACKET          : 7 22 29 33 34 35 36 58 59 60 61 62
RETURN               : 32
RPAREN               : 7 21 23 35 37 38 41 45 76
RSQRBRACKET          : 38
SEG                  : 44
SEMICOLON            : 32 37 38 41 45 74 75
STRING               : 37 39 39 40 41 51
TIMES                : 81
TRUE                 : 36 49 69 87
WHILE                : 35 36
WRONG_ID             : 
error                : 

Nonterminals, with rules where they appear

arg                  : 24 27
args                 : 45 52
body                 : 46 47 48 49 50 51 53
bool                 : 37 38 75
break                : 19
compare              : 35 58 59 60 61
delay                : 17
else                 : 57
elseif               : 56
elseiforelse         : 59 61
empty                : 5 5 20 20 25 25 28 28 54 54 58 60
end                  : 29
expression           : 32 35 35 58 58 59 59 60 60 61 61
fingerList           : 38 40
for                  : 11
funbody              : 23
function             : 2 9
functions            : 
if                   : 13
let                  : 4 14
line                 : 7 8 9 10 11 12 13 14 15 16 17 18 19 22 29 33 34 35 36 58 59 60 61 62
loop                 : 8
main                 : 1
move                 : 15
moveList             : 16
negative             : 73 85
opera                : 48 71 83
operand              : 74 76 76
operator             : 76
output               : 29
params               : 21 23 26
println              : 18
procedure            : 3 10
prodbody             : 21
root                 : 1 2 3 4 0
text                 : 
unit                 : 
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . main root
    (2) root -> . function root
    (3) root -> . procedure root
    (4) root -> . let root
    (5) root -> . empty empty
    (7) main -> . FN MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (91) empty -> .

    FN              shift and go to state 7
    LET             shift and go to state 8
    $end            reduce using rule 91 (empty -> .)

    root                           shift and go to state 1
    main                           shift and go to state 2
    function                       shift and go to state 3
    procedure                      shift and go to state 4
    let                            shift and go to state 5
    empty                          shift and go to state 6

state 1

    (0) S' -> root .



state 2

    (1) root -> main . root
    (1) root -> . main root
    (2) root -> . function root
    (3) root -> . procedure root
    (4) root -> . let root
    (5) root -> . empty empty
    (7) main -> . FN MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (91) empty -> .

    FN              shift and go to state 7
    LET             shift and go to state 8
    $end            reduce using rule 91 (empty -> .)

    main                           shift and go to state 2
    root                           shift and go to state 9
    function                       shift and go to state 3
    procedure                      shift and go to state 4
    let                            shift and go to state 5
    empty                          shift and go to state 6

state 3

    (2) root -> function . root
    (1) root -> . main root
    (2) root -> . function root
    (3) root -> . procedure root
    (4) root -> . let root
    (5) root -> . empty empty
    (7) main -> . FN MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (91) empty -> .

    FN              shift and go to state 7
    LET             shift and go to state 8
    $end            reduce using rule 91 (empty -> .)

    function                       shift and go to state 3
    root                           shift and go to state 10
    main                           shift and go to state 2
    procedure                      shift and go to state 4
    let                            shift and go to state 5
    empty                          shift and go to state 6

state 4

    (3) root -> procedure . root
    (1) root -> . main root
    (2) root -> . function root
    (3) root -> . procedure root
    (4) root -> . let root
    (5) root -> . empty empty
    (7) main -> . FN MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (91) empty -> .

    FN              shift and go to state 7
    LET             shift and go to state 8
    $end            reduce using rule 91 (empty -> .)

    procedure                      shift and go to state 4
    root                           shift and go to state 11
    main                           shift and go to state 2
    function                       shift and go to state 3
    let                            shift and go to state 5
    empty                          shift and go to state 6

state 5

    (4) root -> let . root
    (1) root -> . main root
    (2) root -> . function root
    (3) root -> . procedure root
    (4) root -> . let root
    (5) root -> . empty empty
    (7) main -> . FN MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (91) empty -> .

    FN              shift and go to state 7
    LET             shift and go to state 8
    $end            reduce using rule 91 (empty -> .)

    let                            shift and go to state 5
    root                           shift and go to state 12
    main                           shift and go to state 2
    function                       shift and go to state 3
    procedure                      shift and go to state 4
    empty                          shift and go to state 6

state 6

    (5) root -> empty . empty
    (91) empty -> .

    $end            reduce using rule 91 (empty -> .)

    empty                          shift and go to state 13

state 7

    (7) main -> FN . MAIN LPAREN RPAREN LCRLBRACKET line RCRLBRACKET
    (23) function -> FN . ID LPAREN params RPAREN funbody
    (21) procedure -> FN . ID LPAREN params RPAREN prodbody

    MAIN            shift and go to state 14
    ID              shift and go to state 15


state 8

    (74) let -> LET . ID ASSIGN operand SEMICOLON
    (75) let -> LET . ID ASSIGN bool SEMICOLON

    ID              shift and go to state 16


state 9

    (1) root -> main root .

    $end            reduce using rule 1 (root -> main root .)


state 10

    (2) root -> function root .

    $end            reduce using rule 2 (root -> function root .)


state 11

    (3) root -> procedure root .

    $end            reduce using rule 3 (root -> procedure root .)


state 12

    (4) root -> let root .

    $end            reduce using rule 4 (root -> let root .)


state 13

    (5) root -> empty empty .

    $end            reduce using rule 5 (root -> empty empty .)


state 14

    (7) main -> FN MAIN . LPAREN RPAREN LCRLBRACKET line RCRLBRACKET

    LPAREN          shift and go to state 17


state 15

    (23) function -> FN ID . LPAREN params RPAREN funbody
    (21) procedure -> FN ID . LPAREN params RPAREN prodbody

    LPAREN          shift and go to state 18


state 16

    (74) let -> LET ID . ASSIGN operand SEMICOLON
    (75) let -> LET ID . ASSIGN bool SEMICOLON

    ASSIGN          shift and go to state 19


state 17

    (7) main -> FN MAIN LPAREN . RPAREN LCRLBRACKET line RCRLBRACKET

    RPAREN          shift and go to state 20


state 18

    (23) function -> FN ID LPAREN . params RPAREN funbody
    (21) procedure -> FN ID LPAREN . params RPAREN prodbody
    (24) params -> . ID arg
    (25) params -> . empty empty
    (91) empty -> .

    ID              shift and go to state 21
    RPAREN          reduce using rule 91 (empty -> .)

    params                         shift and go to state 22
    empty                          shift and go to state 23

state 19

    (74) let -> LET ID ASSIGN . operand SEMICOLON
    (75) let -> LET ID ASSIGN . bool SEMICOLON
    (82) operand -> . INT
    (83) operand -> . opera
    (84) operand -> . ID
    (85) operand -> . negative
    (87) bool -> . TRUE
    (88) bool -> . FALSE
    (89) bool -> . ID
    (76) opera -> . OPERA LPAREN operator COMMA operand COMMA operand RPAREN
    (86) negative -> . MINUS INT

    INT             shift and go to state 27
    ID              shift and go to state 24
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31
    OPERA           shift and go to state 32
    MINUS           shift and go to state 33

    operand                        shift and go to state 25
    bool                           shift and go to state 26
    opera                          shift and go to state 28
    negative                       shift and go to state 29

state 20

    (7) main -> FN MAIN LPAREN RPAREN . LCRLBRACKET line RCRLBRACKET

    LCRLBRACKET     shift and go to state 34


state 21

    (24) params -> ID . arg
    (26) arg -> . COMMA params
    (27) arg -> . COMMA arg
    (28) arg -> . empty empty
    (91) empty -> .

    COMMA           shift and go to state 36
    RPAREN          reduce using rule 91 (empty -> .)

    arg                            shift and go to state 35
    empty                          shift and go to state 37

state 22

    (23) function -> FN ID LPAREN params . RPAREN funbody
    (21) procedure -> FN ID LPAREN params . RPAREN prodbody

    RPAREN          shift and go to state 38


state 23

    (25) params -> empty . empty
    (91) empty -> .

    RPAREN          reduce using rule 91 (empty -> .)

    empty                          shift and go to state 39

state 24

    (84) operand -> ID .
    (89) bool -> ID .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 84 (operand -> ID .)
    SEMICOLON       reduce using rule 84 (operand -> ID .)

  ! SEMICOLON       [ reduce using rule 89 (bool -> ID .) ]


state 25

    (74) let -> LET ID ASSIGN operand . SEMICOLON

    SEMICOLON       shift and go to state 40


state 26

    (75) let -> LET ID ASSIGN bool . SEMICOLON

    SEMICOLON       shift and go to state 41


state 27

    (82) operand -> INT .

    SEMICOLON       reduce using rule 82 (operand -> INT .)
    COMMA           reduce using rule 82 (operand -> INT .)
    RPAREN          reduce using rule 82 (operand -> INT .)


state 28

    (83) operand -> opera .

    SEMICOLON       reduce using rule 83 (operand -> opera .)
    COMMA           reduce using rule 83 (operand -> opera .)
    RPAREN          reduce using rule 83 (operand -> opera .)


state 29

    (85) operand -> negative .

    SEMICOLON       reduce using rule 85 (operand -> negative .)
    COMMA           reduce using rule 85 (operand -> negative .)
    RPAREN          reduce using rule 85 (operand -> negative .)


state 30

    (87) bool -> TRUE .

    SEMICOLON       reduce using rule 87 (bool -> TRUE .)
    RPAREN          reduce using rule 87 (bool -> TRUE .)


state 31

    (88) bool -> FALSE .

    SEMICOLON       reduce using rule 88 (bool -> FALSE .)
    RPAREN          reduce using rule 88 (bool -> FALSE .)


state 32

    (76) opera -> OPERA . LPAREN operator COMMA operand COMMA operand RPAREN

    LPAREN          shift and go to state 42


state 33

    (86) negative -> MINUS . INT

    INT             shift and go to state 43


state 34

    (7) main -> FN MAIN LPAREN RPAREN LCRLBRACKET . line RCRLBRACKET
    (8) line -> . loop line
    (9) line -> . function line
    (10) line -> . procedure line
    (11) line -> . for line
    (12) line -> . while line
    (13) line -> . if line
    (14) line -> . let line
    (15) line -> . move line
    (16) line -> . moveList line
    (17) line -> . delay line
    (18) line -> . println line
    (19) line -> . break line
    (20) line -> . empty empty
    (33) loop -> . LOOP LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (34) for -> . FOR ID IN INT DOTDOT INT LCRLBRACKET line RCRLBRACKET
    (35) while -> . WHILE LPAREN expression compare expression RPAREN LCRLBRACKET line RCRLBRACKET
    (36) while -> . WHILE TRUE LCRLBRACKET line RCRLBRACKET
    (58) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET empty
    (59) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (37) move -> . MOVE LPAREN STRING COMMA bool RPAREN SEMICOLON
    (38) moveList -> . MOVE LPAREN LSQRBRACKET fingerList RSQRBRACKET COMMA bool RPAREN SEMICOLON
    (41) delay -> . DELAY LPAREN INT COMMA STRING RPAREN SEMICOLON
    (45) println -> . PRINT EXPR LPAREN args RPAREN SEMICOLON
    (90) break -> . BREAK
    (91) empty -> .

    LOOP            shift and go to state 59
    FN              shift and go to state 44
    FOR             shift and go to state 60
    WHILE           shift and go to state 61
    IF              shift and go to state 62
    LET             shift and go to state 8
    MOVE            shift and go to state 63
    DELAY           shift and go to state 64
    PRINT           shift and go to state 65
    BREAK           shift and go to state 66
    RCRLBRACKET     reduce using rule 91 (empty -> .)

    line                           shift and go to state 45
    loop                           shift and go to state 46
    function                       shift and go to state 47
    procedure                      shift and go to state 48
    for                            shift and go to state 49
    while                          shift and go to state 50
    if                             shift and go to state 51
    let                            shift and go to state 52
    move                           shift and go to state 53
    moveList                       shift and go to state 54
    delay                          shift and go to state 55
    println                        shift and go to state 56
    break                          shift and go to state 57
    empty                          shift and go to state 58

state 35

    (24) params -> ID arg .

    RPAREN          reduce using rule 24 (params -> ID arg .)


state 36

    (26) arg -> COMMA . params
    (27) arg -> COMMA . arg
    (24) params -> . ID arg
    (25) params -> . empty empty
    (26) arg -> . COMMA params
    (27) arg -> . COMMA arg
    (28) arg -> . empty empty
    (91) empty -> .

    ID              shift and go to state 21
    COMMA           shift and go to state 36
    RPAREN          reduce using rule 91 (empty -> .)

    params                         shift and go to state 67
    arg                            shift and go to state 68
    empty                          shift and go to state 69

state 37

    (28) arg -> empty . empty
    (91) empty -> .

    RPAREN          reduce using rule 91 (empty -> .)

    empty                          shift and go to state 70

state 38

    (23) function -> FN ID LPAREN params RPAREN . funbody
    (21) procedure -> FN ID LPAREN params RPAREN . prodbody
    (29) funbody -> . ARROW output LCRLBRACKET line end RCRLBRACKET
    (22) prodbody -> . LCRLBRACKET line RCRLBRACKET

    ARROW           shift and go to state 73
    LCRLBRACKET     shift and go to state 74

    funbody                        shift and go to state 71
    prodbody                       shift and go to state 72

state 39

    (25) params -> empty empty .

    RPAREN          reduce using rule 25 (params -> empty empty .)


state 40

    (74) let -> LET ID ASSIGN operand SEMICOLON .

    FN              reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    LET             reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    $end            reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    LOOP            reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    FOR             reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    WHILE           reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    IF              reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    MOVE            reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    DELAY           reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    PRINT           reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    BREAK           reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    RCRLBRACKET     reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)
    RETURN          reduce using rule 74 (let -> LET ID ASSIGN operand SEMICOLON .)


state 41

    (75) let -> LET ID ASSIGN bool SEMICOLON .

    FN              reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    LET             reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    $end            reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    LOOP            reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    FOR             reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    WHILE           reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    IF              reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    MOVE            reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    DELAY           reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    PRINT           reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    BREAK           reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    RCRLBRACKET     reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)
    RETURN          reduce using rule 75 (let -> LET ID ASSIGN bool SEMICOLON .)


state 42

    (76) opera -> OPERA LPAREN . operator COMMA operand COMMA operand RPAREN
    (77) operator -> . PLUS
    (78) operator -> . MINUS
    (79) operator -> . DIVIDE
    (80) operator -> . ASTR
    (81) operator -> . TIMES

    PLUS            shift and go to state 76
    MINUS           shift and go to state 77
    DIVIDE          shift and go to state 78
    ASTR            shift and go to state 79
    TIMES           shift and go to state 80

    operator                       shift and go to state 75

state 43

    (86) negative -> MINUS INT .

    SEMICOLON       reduce using rule 86 (negative -> MINUS INT .)
    EQEQ            reduce using rule 86 (negative -> MINUS INT .)
    LTE             reduce using rule 86 (negative -> MINUS INT .)
    GTE             reduce using rule 86 (negative -> MINUS INT .)
    LT              reduce using rule 86 (negative -> MINUS INT .)
    GT              reduce using rule 86 (negative -> MINUS INT .)
    COMMA           reduce using rule 86 (negative -> MINUS INT .)
    LCRLBRACKET     reduce using rule 86 (negative -> MINUS INT .)
    RPAREN          reduce using rule 86 (negative -> MINUS INT .)


state 44

    (23) function -> FN . ID LPAREN params RPAREN funbody
    (21) procedure -> FN . ID LPAREN params RPAREN prodbody

    ID              shift and go to state 15


state 45

    (7) main -> FN MAIN LPAREN RPAREN LCRLBRACKET line . RCRLBRACKET

    RCRLBRACKET     shift and go to state 81


state 46

    (8) line -> loop . line
    (8) line -> . loop line
    (9) line -> . function line
    (10) line -> . procedure line
    (11) line -> . for line
    (12) line -> . while line
    (13) line -> . if line
    (14) line -> . let line
    (15) line -> . move line
    (16) line -> . moveList line
    (17) line -> . delay line
    (18) line -> . println line
    (19) line -> . break line
    (20) line -> . empty empty
    (33) loop -> . LOOP LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (34) for -> . FOR ID IN INT DOTDOT INT LCRLBRACKET line RCRLBRACKET
    (35) while -> . WHILE LPAREN expression compare expression RPAREN LCRLBRACKET line RCRLBRACKET
    (36) while -> . WHILE TRUE LCRLBRACKET line RCRLBRACKET
    (58) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET empty
    (59) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (37) move -> . MOVE LPAREN STRING COMMA bool RPAREN SEMICOLON
    (38) moveList -> . MOVE LPAREN LSQRBRACKET fingerList RSQRBRACKET COMMA bool RPAREN SEMICOLON
    (41) delay -> . DELAY LPAREN INT COMMA STRING RPAREN SEMICOLON
    (45) println -> . PRINT EXPR LPAREN args RPAREN SEMICOLON
    (90) break -> . BREAK
    (91) empty -> .

    LOOP            shift and go to state 59
    FN              shift and go to state 44
    FOR             shift and go to state 60
    WHILE           shift and go to state 61
    IF              shift and go to state 62
    LET             shift and go to state 8
    MOVE            shift and go to state 63
    DELAY           shift and go to state 64
    PRINT           shift and go to state 65
    BREAK           shift and go to state 66
    RCRLBRACKET     reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)

    loop                           shift and go to state 46
    line                           shift and go to state 82
    function                       shift and go to state 47
    procedure                      shift and go to state 48
    for                            shift and go to state 49
    while                          shift and go to state 50
    if                             shift and go to state 51
    let                            shift and go to state 52
    move                           shift and go to state 53
    moveList                       shift and go to state 54
    delay                          shift and go to state 55
    println                        shift and go to state 56
    break                          shift and go to state 57
    empty                          shift and go to state 58

state 47

    (9) line -> function . line
    (8) line -> . loop line
    (9) line -> . function line
    (10) line -> . procedure line
    (11) line -> . for line
    (12) line -> . while line
    (13) line -> . if line
    (14) line -> . let line
    (15) line -> . move line
    (16) line -> . moveList line
    (17) line -> . delay line
    (18) line -> . println line
    (19) line -> . break line
    (20) line -> . empty empty
    (33) loop -> . LOOP LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (34) for -> . FOR ID IN INT DOTDOT INT LCRLBRACKET line RCRLBRACKET
    (35) while -> . WHILE LPAREN expression compare expression RPAREN LCRLBRACKET line RCRLBRACKET
    (36) while -> . WHILE TRUE LCRLBRACKET line RCRLBRACKET
    (58) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET empty
    (59) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (37) move -> . MOVE LPAREN STRING COMMA bool RPAREN SEMICOLON
    (38) moveList -> . MOVE LPAREN LSQRBRACKET fingerList RSQRBRACKET COMMA bool RPAREN SEMICOLON
    (41) delay -> . DELAY LPAREN INT COMMA STRING RPAREN SEMICOLON
    (45) println -> . PRINT EXPR LPAREN args RPAREN SEMICOLON
    (90) break -> . BREAK
    (91) empty -> .

    LOOP            shift and go to state 59
    FN              shift and go to state 44
    FOR             shift and go to state 60
    WHILE           shift and go to state 61
    IF              shift and go to state 62
    LET             shift and go to state 8
    MOVE            shift and go to state 63
    DELAY           shift and go to state 64
    PRINT           shift and go to state 65
    BREAK           shift and go to state 66
    RCRLBRACKET     reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)

    function                       shift and go to state 47
    line                           shift and go to state 83
    loop                           shift and go to state 46
    procedure                      shift and go to state 48
    for                            shift and go to state 49
    while                          shift and go to state 50
    if                             shift and go to state 51
    let                            shift and go to state 52
    move                           shift and go to state 53
    moveList                       shift and go to state 54
    delay                          shift and go to state 55
    println                        shift and go to state 56
    break                          shift and go to state 57
    empty                          shift and go to state 58

state 48

    (10) line -> procedure . line
    (8) line -> . loop line
    (9) line -> . function line
    (10) line -> . procedure line
    (11) line -> . for line
    (12) line -> . while line
    (13) line -> . if line
    (14) line -> . let line
    (15) line -> . move line
    (16) line -> . moveList line
    (17) line -> . delay line
    (18) line -> . println line
    (19) line -> . break line
    (20) line -> . empty empty
    (33) loop -> . LOOP LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (34) for -> . FOR ID IN INT DOTDOT INT LCRLBRACKET line RCRLBRACKET
    (35) while -> . WHILE LPAREN expression compare expression RPAREN LCRLBRACKET line RCRLBRACKET
    (36) while -> . WHILE TRUE LCRLBRACKET line RCRLBRACKET
    (58) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET empty
    (59) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (37) move -> . MOVE LPAREN STRING COMMA bool RPAREN SEMICOLON
    (38) moveList -> . MOVE LPAREN LSQRBRACKET fingerList RSQRBRACKET COMMA bool RPAREN SEMICOLON
    (41) delay -> . DELAY LPAREN INT COMMA STRING RPAREN SEMICOLON
    (45) println -> . PRINT EXPR LPAREN args RPAREN SEMICOLON
    (90) break -> . BREAK
    (91) empty -> .

    LOOP            shift and go to state 59
    FN              shift and go to state 44
    FOR             shift and go to state 60
    WHILE           shift and go to state 61
    IF              shift and go to state 62
    LET             shift and go to state 8
    MOVE            shift and go to state 63
    DELAY           shift and go to state 64
    PRINT           shift and go to state 65
    BREAK           shift and go to state 66
    RCRLBRACKET     reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)

    procedure                      shift and go to state 48
    line                           shift and go to state 84
    loop                           shift and go to state 46
    function                       shift and go to state 47
    for                            shift and go to state 49
    while                          shift and go to state 50
    if                             shift and go to state 51
    let                            shift and go to state 52
    move                           shift and go to state 53
    moveList                       shift and go to state 54
    delay                          shift and go to state 55
    println                        shift and go to state 56
    break                          shift and go to state 57
    empty                          shift and go to state 58

state 49

    (11) line -> for . line
    (8) line -> . loop line
    (9) line -> . function line
    (10) line -> . procedure line
    (11) line -> . for line
    (12) line -> . while line
    (13) line -> . if line
    (14) line -> . let line
    (15) line -> . move line
    (16) line -> . moveList line
    (17) line -> . delay line
    (18) line -> . println line
    (19) line -> . break line
    (20) line -> . empty empty
    (33) loop -> . LOOP LCRLBRACKET line RCRLBRACKET
    (23) function -> . FN ID LPAREN params RPAREN funbody
    (21) procedure -> . FN ID LPAREN params RPAREN prodbody
    (34) for -> . FOR ID IN INT DOTDOT INT LCRLBRACKET line RCRLBRACKET
    (35) while -> . WHILE LPAREN expression compare expression RPAREN LCRLBRACKET line RCRLBRACKET
    (36) while -> . WHILE TRUE LCRLBRACKET line RCRLBRACKET
    (58) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET empty
    (59) if -> . IF expression compare expression LCRLBRACKET line RCRLBRACKET elseiforelse
    (74) let -> . LET ID ASSIGN operand SEMICOLON
    (75) let -> . LET ID ASSIGN bool SEMICOLON
    (37) move -> . MOVE LPAREN STRING COMMA bool RPAREN SEMICOLON
    (38) moveList -> . MOVE LPAREN LSQRBRACKET fingerList RSQRBRACKET COMMA bool RPAREN SEMICOLON
    (41) delay -> . DELAY LPAREN INT COMMA STRING RPAREN SEMICOLON
    (45) println -> . PRINT EXPR LPAREN args RPAREN SEMICOLON
    (90) break -> . BREAK
    (91) empty -> .
